--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>Yoga Landing Page</title>
     <!-- Font Awesome Pro 5 */ -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/resources/css/grid.css">
-    <link rel="stylesheet" href="/resources/css/main.css">
-    <link rel="stylesheet" href="/resources/css/responsives.css">
-    <link rel="shortcut icon" href="/resources/img/logo-header.png" type="image/x-icon">
+    <link rel="stylesheet" href="./resources/css/grid.css">
+    <link rel="stylesheet" href="./resources/css/main.css">
+    <link rel="stylesheet" href="./resources/css/responsives.css">
+    <link rel="shortcut icon" href="./resources/img/logo-header.png" type="image/x-icon">
 </head>
 <body>
     <header id="header">
         <nav class="padding-tb-2r margin-lr-3r">
             <div class="container">
                 <div class="header__nav-content flex">
-                    <img class="header__logo" src="/resources/img/logo-header.png" alt="logo">
+                    <img class="header__logo" src="./resources/img/logo-header.png" alt="logo">
                     <ul class="header__nav flex">
                         <li class="nav-item">
-                            <a href="#" class="txt-size title-color">Home</a>
+                            <a href="#" class="txt-size title-color nav-active">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="txt-size title-color">About</a>
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-xs-12 flex jc-center">
-                        <img class="img-header" src="/resources/img/header.png" alt="img">
+                        <img class="img-header" src="./resources/img/header.png" alt="img">
                     </div>
                     <div class="col-6 col-xs-12 translateX-left-991px ">
                         <h1 class="title-color title-size">Balance Your Body and Mine</h1>
@@ -82,21 +82,21 @@
             <div class="row">
                 <div class="col-4 col-xs-12 txt-center">
                     <div class="program-item">
-                        <img src="/resources/img/program1.png" alt="program1">
+                        <img src="./resources/img/program1.png" alt="program1">
                         <h3 class="title-color txt-size">Program 1</h3>
                         <p class="title-color txt-size">sint occaecat cupidunt non</p>
                     </div>
                 </div>
                 <div class="col-4 col-xs-12 txt-center">
                     <div class="program-item">
-                        <img src="/resources/img/program2.png" alt="program2">
+                        <img src="./resources/img/program2.png" alt="program2">
                         <h3 class="title-color txt-size">Program 2</h3>
                         <p class="title-color txt-size">sint occaecat cupidunt non</p>
                     </div>
                 </div>
                 <div class="col-4 col-xs-12 txt-center">
                     <div class="program-item">
-                        <img src="/resources/img/program3.png" alt="program3">
+                        <img src="./resources/img/program3.png" alt="program3">
                         <h3 class="title-color txt-size">Program 3</h3>
                         <p class="title-color txt-size">sint occaecat cupidunt non</p>
                     </div>
@@ -106,7 +106,7 @@
     </section>
 
     <!-- Section Learn -->
-    <section id="learn-yoga" class="background-image padding-tb-8r" style="background-image: url('/resources/img/bg2.png')">
+    <section id="learn-yoga" class="background-image padding-tb-8r" style="background-image: url('./resources/img/bg2.png')">
         <div class="container">
             <div class="row">
                 <div class="col-6 col-xs-12 translateX-left">
@@ -115,14 +115,14 @@
                     <a href="#" class="btn">learn more</a>
                 </div>
                 <div class="col-6 col-xs-12 flex jc-center padding-tb-3r">
-                    <img class="learn-yoga-img" src="/resources/img/img2.png" alt="img2">
+                    <img class="learn-yoga-img" src="./resources/img/img2.png" alt="img2">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Section Join Yoga -->
-    <section id="join-yoga" class="background-image padding-tb-8r" style="background-image: url('/resources/img/img3.png')">
+    <section id="join-yoga" class="background-image padding-tb-8r" style="background-image: url('./resources/img/img3.png')">
         <div class="container">
             <div class="row jc-flex-end">
                 <div class="col-6 col-xs-12 translateX-left">
@@ -135,7 +135,7 @@
     </section>
 
     <!-- Section Galery -->
-    <section id="galery" class="background-image padding-tb-8r" style="background-image: url('/resources/img/bg4.png')">
+    <section id="galery" class="background-image padding-tb-8r" style="background-image: url('./resources/img/bg4.png')">
         <div class="container">
             <div class="txt-center">
                 <h2 class="title-color title-size">Galery</h2>
@@ -144,7 +144,7 @@
             <div class="row padding-tb-8r">
                 <div class="col-4 col-xs-12">
                     <div class="galery-item">
-                        <img src="/resources/img/img4.png" alt="img4">
+                        <img src="./resources/img/img4.png" alt="img4">
                         <div class="galery-content txt-center">
                             <h3 class="txt-size title-color">Facilis Gravida</h3>
                             <p class="title-color txt-size">Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-4 col-xs-12">
                     <div class="galery-item">
-                        <img src="/resources/img/img5.png" alt="img4">
+                        <img src="./resources/img/img5.png" alt="img4">
                         <div class="galery-content txt-center">
                             <h3 class="txt-size title-color">Facilis Gravida</h3>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-4 col-xs-12">
                     <div class="galery-item">
-                        <img src="/resources/img/img6.png" alt="img4">
+                        <img src="./resources/img/img6.png" alt="img4">
                         <div class="galery-content txt-center">
                             <h3 class="txt-size title-color">Facilis Gravida</h3>
                             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
@@ -178,7 +178,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 col-xs-12 flex jc-center">
-                    <img class="video" src="/resources/img/video.png" alt="video">
+                    <img class="video" src="./resources/img/video.png" alt="video">
                 </div>
                 <div class="col-6 col-xs-12 translateX-right translateX-left-991px">
                     <h2 class="title-color title-size">Yoga Training Video Showreel</h2>
@@ -194,7 +194,7 @@
     </section>
 
     <!-- Section Get in Touch -->
-    <section id="get-in-touch" class="background-image padding-tb-8r" style="background-image: url('/resources/img/bg4.png')">
+    <section id="get-in-touch" class="background-image padding-tb-8r" style="background-image: url('./resources/img/bg4.png')">
         <div class="container">
             <div class="txt-center">
                 <h2 class="title-color title-size">Get in Touch</h2>
@@ -254,7 +254,7 @@
                     </ul>
                 </div>
                 <div class="col-3 col-xs-12 margin-tb-2r">
-                    <img src="/resources/img/logo.png" alt="logo">
+                    <img src="./resources/img/logo.png" alt="logo">
                     <div class="padding-tb-3r">
                         <p>Copyright &copy; 2020 Freepik</p>
                         <p>Company S.L.All rights reserved.</p>
